plugins {
    id 'java'
    id 'io.franzbecker.gradle-lombok' version '5.0.0'
    id 'groovy'
}

group = 'retos'
version = '1.0-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.apache.commons:commons-lang3:3.13.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    implementation 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    // JUnit 5
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // Spock Framework
    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
    testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'

    // Groovy
    testImplementation 'org.codehaus.groovy:groovy-all:3.0.18'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

lombok {
    version("1.18.34")
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}